<resources>
    <string name="app_name">Meezan Bank</string>
    <string name="title_login"> </string>
    <string name="title_home">Meezan Bank Limited</string>
    <string name="title_qrpay"> </string>
    <string name="title_contacts"> </string>
    <string name="title_FAQ"> </string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>r
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="forgot_login_details">Forgot Login Details?</string>
    <string name="register_for_mobile_app">Register for Mobile App</string>
    <string name="open_a_new_account">Open a New Account</string>
    <string name="biometeric_login">Biometeric Login</string>
    <string name="login">Login</string>
    <string name="remember_my_username">Remember my Username</string>
    <string name="registered_office_head_office"><![CDATA[Registered Office & Head Office]]></string>
    <string name="meezan_address">Meezan Bank Limited, Meezan House, C-25 Estate Avenue, SITE, Karachi.</string>
    <string name="customer_care_unit">Customer Care Unit</string>
    <string name="fax">Fax: +92 (21) 36406049</string>
    <string name="phone"><![CDATA[Phone: +92 (21) 38103500 & +92 (21) 37133500]]></string>
    <string name="email">Email: info@meezanbank.com</string>
    <string name="contactHeader">Contact Us</string>
    <string name="complaint_text">To record a Complaint, use the following channels,</string>
    <string name="fax2">Fax: +92 (21) 36406023</string>
    <string name="complaints_email">Email: complaints@meezanbank.com</string>
    <string name="websites"><![CDATA[Websites: www.meezanbank.com]]></string>
    <string name="_24_7_call_center_92_21_111_331_331_92_21_111_331_332"><![CDATA[24/7 Call Center : +92 (21) 111-331-331 & +92 (21) 111-331-332]]></string>
    <string name="contact_footer" />
    <string name="contact_image" />
    <string name="callcenterPhone"><![CDATA[+92 (21) 111-331-331 & +92 (21) 111-331-332]]></string>
    <string name="GuaranteeHeading">Meezan Bank Guarantee Verification</string>
    <string name="Respond">You can also write a letter to \'The Manager Customer Care Unit\' and post it to our Head Office at Meezan House, C-25, Estate Avenue, SITE, Karachi- Pakistan. Once we receive your complaint, it will be addressed promptly and we will respond to you within 7 to 15 business days.</string>
    <string name="callCenterHeading">Call Center</string>
    <string name="adc_email">Email: waqas.alavi@meezanbank.com</string>
    <string name="adc_phone">Ph: +92 (21) 38103500, Extension: 2096</string>
    <string name="adc_name">Name: Waqas Ahmed Alavi</string>
    <string name="adc_heading">Alternate Delivery Channel (ADC) Operations Contacts</string>
    <string name="guarantee_email">Email: mbl.guaranteeverification@meezanbank.com</string>
    <string name="credit_dept_heading">Credit Administration Department</string>
    <string name="credit_dept_name">Name: Munawar Bilal</string>
    <string name="credit_dept_phone">Contact: + 92 (21) 38103500 Ext: 3560</string>
    <string name="mobile_topup">Mobile Topup</string>
    <string name="share">Share</string>
    <string name="transactions">Transactions</string>
    <string name="show_balance">Show Balance</string>
    <string name="muhammad_shaheer">MUHAMMAD SHAHEER</string>
    <string name="accountNum">Current Account: 91929442142184</string>
    <string name="accountHolder">Muhammad Shaheer\n</string>
    <string name="IBAN">IBAN: PK56MEZN0001930107708159</string>
    <string name="sendMoneyButton">Send Money</string>
    <string name="raast_payment">Raast Pay</string>
    <string name="VIEW_balance">SHOW BALANCE</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="card_management">Card Management</string>
    <string name="zakat_sadqaat"><![CDATA[Zakat & Sadqaat]]></string>
    <string name="feedback">Feedback</string>
    <string name="qr_payments">QR Payments</string>
    <string name="al_meezan_mutual_funds">Al-Meezan Mutual Funds</string>
    <string name="payoneer">Payoneer</string>
    <string name="search">Search</string>
    <string name="qr">QR</string>
    <string name="profile">profile</string>
    <string name="notifications">notifications</string>
    <string name="good_morning_shaheer">Good morning, Shaheer</string>
    <string name="welcome">Welcome</string>
    <string name="logo">logo</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="power_button">Power</string>
    <string name="app_icon">App Icon</string>
    <string name="qr_payment">QR Payment</string>
    <string name="open_the_scanner">Open the Scanner</string>
    <string name="faqs_header">FAQs</string>
    <string name="qanda"><![CDATA[Common Questions & Answers]]></string>
    <string name="FAQ_header">FAQ</string>
    <string name="qandnas"><![CDATA[Common Question & Answers]]></string>
</resources>