<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/loginicon"
        android:title="@string/title_login" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/contact"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_qrpay"
        android:icon="@drawable/qrpay"
        android:title="@string/title_qrpay" />

    <item
        android:id="@+id/navigation_FAQ"
        android:icon="@drawable/faqs"
        android:title="@string/title_FAQ" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


</menu>